added gif and primary color

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Agro Fund One
+title: Heavy Payload | Low Altitude | Aero Fleet One Drones | United States
 email: your-email@example.com
 
 baseurl: "" # the subpath of your site, e.g. /blog
