--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,73 +1,60 @@
 items:
-  headline: AGRO FUND ONE
-  subline: REDUCED RISK THROUGH A LEVERAGED INVESTMENT METHODOLOGY
+  headline: Aero Fleet One
+  subline: None
   description: >-
-    Agro Fund One, Limited is an agricultural investment fund focused on the international agricultural sector. Our mandate is to grow investor wealth through buying, aggregating, and reselling agricultural assets for further disposition to Agro-holding companies. This process is commonly referred to as a "roll-up".
-  opps:
-    heading: Opportunities
+    none
+
+  mission:
+    heading: Our Mission
     items:
       -
-        icon: /assets/img/opps/turnover.png
-        heading: 4 years of verifiable turnover (2017-2020)
+        # icon: /assets/img/opps/turnover.png
+        heading: World's Food Supply
         text: >-
-          Having built a great international team and strategic vision, this fund now has the opportunity to invest into a new, scalable enterprise model utilizing the resources, and more importantly the dynamic international relationships earned through our developments-to-date.
+          Aero Fleet One designs tools and implements systems that make crop protection less expensive and more efficient than conventional methods.
+        img: ["/assets/img/mission/Grain-agricultural-fields.jpg","/assets/img/mission/corn-field.jpg","/assets/img/mission/aerial-view-field.jpg"]
       -  
-        icon: /assets/img/opps/bank.png
-        heading: Access to international capital, markets and banking
+        # icon: /assets/img/opps/bank.png
+        heading: World's Energy Supply
         text: >-
           Agro Fund One, Limited has developed close relationships with approximately 50 high and ultra-high net worth individual investors from around the world as well as proprietary and partner based international banking and multi-currency relationships.
+        img: ["/assets/img/mission/EOR-techniques-in-revitalizing-mature-oil-fields.jpg","/assets/img/mission/flare-stack.jpg","/assets/img/mission/oil-fields.jpg"]  
+
+  unit:
+    heading: Business Units
+    items:
       -
-        icon: /assets/img/opps/america.png
-        heading: Focus on South, Central and North America
+        icon: /assets/img/unit/unitimg1.png
+        heading: Our Airframes
         text: >-
-          Agro Fund One, Limited has identified specific market opportunities in North, Central and South America that demonstrate opportunity for disruption. We evaluate assets in agricultural processing, logistics and storage by targeting institution owned or controlled, non-performing and distressed loans or equity positions.
+          Heavy Payload - Aero Fleet One focuses on airframes that can carry heavy payloads, typically 20-150 pounds. Long Range- our drones can go up to 300 miles. Gasoline Powered- our powerful engines allow us to lift heavy things and operate in diverse climate conditions.
+      -  
+        icon: /assets/img/unit/unitimg2.jpg
+        heading: Our Guidance System
+        text: >-
+          Aero Fleet One utilizes a proprietary guidance system that enables us to fly Beyond Visual Line of Sight. We fly at a lower altitude than other high speed drones. Our BVLOS - guidance system simultaneously calculates and adjusts to weather conditions.
       -
-        icon: /assets/img/opps/growth.png
-        heading: Growing with innovative companies in the international agricultural sector
+        icon: /assets/img/unit/unitimg3.jpg
+        heading: Our Operations
         text: >-
-         Projects in North and South America and a stand-alone project in the Horn of Africa focus on a wide range of sectors ranging from crop inputs, logistics, processing, growing and ag-tech innovations.
-      -
-        icon: /assets/img/opps/farm.png
-        heading: Partnerships with farmers located in high yield production regions over two continents
-        text: >-
-          Farmland and food represent an attractive, long-term investment while providing significant relative capital preservation throughout times of economic turmoil.
-      -
-        icon: /assets/img/opps/partner.png
-        heading: Public-Private partnership supporting food security and sustainability
-        text: >-
-          Experience in key public-private partnerships in developing countries. More capital mobilized through innovative methods like blended finance and benchmarks to explore ways to cooperate.
+          Aero Fleet One trains drone pilots to use our unique airframe and guidance system. Our ground and administrative team facilitates the regulatory paperwork and permission to fly missions for our clients in multiple and complex jurisdictions. 
   team:
-    heading: Team
+    heading: Our Team
     intro:
     items:
       -
-        name: Guilherme Moreira
-        title:  Head of International Development
-        img: /assets/img/team/gui-moreira.jpg
-        mail:  guilherme@mesabafinance.com
-        linkedin: https://www.linkedin.com/in/guilhermesvsmoreira/
-        text: >-
-          Guilherme is a Brazilian Environmental Engineer passionate about sustainable development. He is committed to ensure the sustainability impact of our international investments so that they genuinely benefit local communities while ensuring profitability for investors.
-      -
-        name: Mark M. Erjavec
-        title: Fund Manager
-        img: /assets/img/team/mark-erjavec-hat.jpg
-        mail: mark@mesabafinance.com
+        name: Mark Erjavec
+        title: Finance
+        img: /assets/img/team/mark-headshot.png
+        mail: markerjavec@aerofleetone.com
         linkedin: https://www.linkedin.com/in/markerjavec/
-        text: >-
-          With the support of a market-leading research team and hands-on management of direct investments, Mark travels the world exploring new opportunities and working to develop quality relationships on behalf of the Agro Fund One and for our stakeholders.
-      -
-        name: Anatolii Osadchyi
-        title: European Project Analyst
-        img: /assets/img/team/anatolii-osadchyi.jpg
-        mail: anatolii@mesabafinance.com
-        linkedin: https://www.linkedin.com/in/aosadchyi/
-        text: >-
-          Based in Kyiv, Ukraine. Anatolii is responsible for developing and managing international project initiatives. Anatolii is also the founder of Labirudza farms, a pioneering eco-tourism project in Ukraine.
-  portfolio:
-    heading: Portfolio
+        # text: >-
+        #   With the support of a market-leading research team and hands-on management of direct investments, Mark travels the world exploring new opportunities and working to develop quality relationships on behalf of the Agro Fund One and for our stakeholders.
+
+  timeline:
+    heading: Projected Timeline
     text: >-
-      Between Eastern European offices in Georgia and Ukraine, a trading office scheduled to open mid-2021 in Switzerland, our banking center in Hong Kong, field operations spread over 5 continents, our key Horn of Africa strategy, and our Midwestern headquarters in the United States, <strong>we have built our fund on a truly global reach.</strong>
+      yo
     items:
       -
         heading: Marvella Farms
@@ -145,6 +132,8 @@ items:
         left: 57%
         top_m: 45%
         left_m: 52%
+    gif: /assets/video/3D-model-DR-60.gif
+
   media:
     heading: Media
 
@@ -155,5 +144,5 @@ items:
       My investments are done through Mesaba Finance Company Incorporated, which supports a boutique investment banking operation and employs international staff to manage funds related to agriculture and other specialty finance in North, Central and South America, as well as a project in the Horn of Africa.
     link: Go To MesabaFinance.com
     url: http://www.mesabafinance.com
-    img: /assets/img/team/mark-erjavec.jpg
+    # img: /assets/img/team/mark-erjavec.jpg
     
