Setup news posts

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -52,7 +52,7 @@ items:
       -
         name: Mark Erjavec
         title: Finance
-        img: /assets/img/team/MarkErjavec.png
+        img: /assets/img/team/MarkErjavec.jpg
         mail: mark@aerofleetone.com
         linkedin: https://www.linkedin.com/in/markerjavec/
   timeline:
