--- a/_data/general.yml
+++ b/_data/general.yml
@@ -1,8 +1,7 @@
 items:
   headline: Aero Fleet One
-  subline: None
   description: >-
-    none
+    Aero Fleet One designs tools and implements systems that make crop protection less expensive and more efficient than conventional methods
 
   mission:
     heading: Our Mission
