--- a/_data/general.yml
+++ b/_data/general.yml
@@ -19,6 +19,13 @@ items:
           Aero Fleet One drones have the range and payload capacities to fly BVLOS missions in weather conditions necessary to serve the Oil and Gas and Power Transmission industries. Through our work in energy we are working to help the energy industry become more safe.
         img: ["/assets/img/mission/EOR-techniques-in-revitalizing-mature-oil-fields.jpg","/assets/img/mission/flare-stack.jpg","/assets/img/mission/oil-fields.jpg"]  
 
+  videos:
+    -
+      title: Mark Erjavec on the AeroFleetOne Business Case
+      url: https://www.youtube.com/embed/6fk2A7VJme4
+    -
+      title: Low Altitude Flight for Aerial Application
+      url: https://www.youtube.com/embed/sJHYu9mznSI
   unit:
     heading: Business Units
     items:
