--- a/_data/general.yml
+++ b/_data/general.yml
@@ -6,79 +6,90 @@ items:
   mission:
     heading: Our Mission
     items:
-      -
-        # icon: /assets/img/opps/turnover.png
+      - # icon: /assets/img/opps/turnover.png
         heading: World's Food Supply
         text: >-
           Aero Fleet One designs tools and implements systems that make crop protection less expensive and more efficient than conventional methods.
-        img: ["/assets/img/mission/Grain-agricultural-fields.jpg","/assets/img/mission/corn-field.jpg","/assets/img/mission/aerial-view-field.jpg"]
-      -  
-        # icon: /assets/img/opps/bank.png
+        img:
+          [
+            "/assets/img/mission/Grain-agricultural-fields.jpg",
+            "/assets/img/mission/corn-field.jpg",
+            "/assets/img/mission/aerial-view-field.jpg",
+          ]
+      - # icon: /assets/img/opps/bank.png
         heading: World's Energy Supply
         text: >-
           Aero Fleet One drones have the range and payload capacities to fly BVLOS missions in weather conditions necessary to serve the Oil and Gas and Power Transmission industries. Through our work in energy we are working to help the energy industry become more safe.
-        img: ["/assets/img/mission/EOR-techniques-in-revitalizing-mature-oil-fields.jpg","/assets/img/mission/flare-stack.jpg","/assets/img/mission/oil-fields.jpg"]  
+        img:
+          [
+            "/assets/img/mission/EOR-techniques-in-revitalizing-mature-oil-fields.jpg",
+            "/assets/img/mission/flare-stack.jpg",
+            "/assets/img/mission/oil-fields.jpg",
+          ]
 
   videos:
-    -
-      title: Mark Erjavec on the AeroFleetOne Business Case
+    - title: Mark Erjavec on the AeroFleetOne Business Case
       url: https://www.youtube.com/embed/6fk2A7VJme4
-    -
-      title: Low Altitude Flight for Aerial Application
+    - title: Low Altitude Flight for Aerial Application
       url: https://www.youtube.com/embed/sJHYu9mznSI
   unit:
     heading: Business Units
     items:
-      -
-        icon: /assets/img/unit/unitimg1.png
+      - icon: /assets/img/unit/unitimg1.png
         heading: Our Airframes
         text: >-
           Heavy Payload - Aero Fleet One focuses on airframes that can carry heavy payloads, typically 20-150 pounds. Long Range- our drones can go up to 300 miles. Gasoline Powered- our powerful engines allow us to lift heavy things and operate in diverse climate conditions.
-      -  
-        icon: /assets/img/unit/unitimg2.jpg
+      - icon: /assets/img/unit/unitimg2.jpg
         heading: Our Guidance System
         text: >-
           Aero Fleet One utilizes a proprietary guidance system that enables us to fly Beyond Visual Line of Sight. We fly at a lower altitude than other high speed drones. Our BVLOS - guidance system simultaneously calculates and adjusts to weather conditions.
-      -
-        icon: /assets/img/unit/unitimg3.jpg
+      - icon: /assets/img/unit/unitimg3.jpg
         heading: Our Operations
         text: >-
-          Aero Fleet One trains drone pilots to use our unique airframe and guidance system. Our ground and administrative team facilitates the regulatory paperwork and permission to fly missions for our clients in multiple and complex jurisdictions. 
-  
+          Aero Fleet One trains drone pilots to use our unique airframe and guidance system. Our ground and administrative team facilitates the regulatory paperwork and permission to fly missions for our clients in multiple and complex jurisdictions.
+
   where:
     img: /assets/img/aerofleetonemap.png
     heading: Where We Are
     text: AeroFleetOne serves North, Central and South America.
 
-
   team:
     heading: Our Team
     intro:
     items:
-      -
-        name: Mark Erjavec
+      - name: Mark Erjavec
         title: Finance
         img: /assets/img/team/MarkErjavec.jpg
         mail: mark@aerofleetone.com
         linkedin: https://www.linkedin.com/in/markerjavec/
+      - name: Maria Dyatchyna
+        title: Marketing and Administration
+        img: /assets/img/team/MariaDyatchyna.jpg
+        mail: maria@aerofleetone.com
+        linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
+      - name: Allan Dosan
+        title: Market Development
+        img: /assets/img/team/AllanDosan.jpg
+        mail: allan@aerofleetone.com
+        linkedin: https://www.linkedin.com/in/allandosan/
+      - name: Destiny West
+        title: Project Manager
+        img: /assets/img/team/DestinyWest.jpg
+        mail: destiny@aerofleetone.com
+        linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
   timeline:
     heading: Projected Timeline
     text:
     items:
-      -
-        year: 2019
+      - year: 2019
         text: Development of Training Program Targets Generation Z
-      -
-        year: 2020
-        text:  Certification &  Training Program Trials
-      -
-        year: 2021
-        text:  Training Program Implementation & Drone testing &  Development of Operations Platform 
-      -
-        year: 2022
-        text: Roll up Of Conventional Aerial Application Businesses 
-      -
-        year: 2023
+      - year: 2020
+        text: Certification &  Training Program Trials
+      - year: 2021
+        text: Training Program Implementation & Drone testing &  Development of Operations Platform
+      - year: 2022
+        text: Roll up Of Conventional Aerial Application Businesses
+      - year: 2023
         text: Proliferation & Fleet Implementation
     gif: /assets/video/3D-model-DR-60.gif
 
