Add video slideshow of drone progress, add gallery with 2020 images

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -32,6 +32,8 @@ items:
       url: https://www.youtube.com/embed/6fk2A7VJme4
     - title: Low Altitude Flight for Aerial Application
       url: https://www.youtube.com/embed/sJHYu9mznSI
+    - title: Drone Development Progress Over Time
+      url: https://www.youtube.com/embed/Sd6qEkTZxTo
   unit:
     heading: Business Units
     items:
