Change Maria title and add link to agro fund

--- a/_data/general.yml
+++ b/_data/general.yml
@@ -70,7 +70,7 @@ items:
         mail: destiny@aerofleetone.com
         linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
       - name: Maria Dyatchyna
-        title: Marketing and Administration
+        title: Analyst and European Representative
         img: /assets/img/team/MariaDyatchyna.jpg
         mail: maria@aerofleetone.com
         linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
