--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-
 title: Heavy Payload | Low Altitude | Aero Fleet One Drones | United States
 email: your-email@example.com
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-
 
 # Build settings
 theme: minima
@@ -16,7 +14,7 @@ sass:
 
 collections:
   news:
-    output: true
+    output: false
 
 exclude: [README.md]
 
