--- a/_data/general.yml
+++ b/_data/general.yml
@@ -65,7 +65,7 @@ items:
         mail: allan@aerofleetone.com
         linkedin: https://www.linkedin.com/in/allandosan/
       - name: Destiny West
-        title: Project Manager
+        title: Team Lead
         img: /assets/img/team/DestinyWest.jpg
         mail: destiny@aerofleetone.com
         linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
