--- a/_data/general.yml
+++ b/_data/general.yml
@@ -40,36 +40,38 @@ items:
     text: Intro paragraph
     story:
       heading: Our Story
-      text: >
-        Aero Fleet One was born in 2013 when the founder, Mark Erjavec, met a UAS developer named 
+      text:
+        - "Aero Fleet One was born in 2013 when the founder, Mark Erjavec, met a UAS developer named 
         Yuri Pederii. At the time, Yuri was developing the AeroDrone DR-20, a smaller predecessor 
         to his current work with UAVITA. Mark saw potential in the unique fixed-wing, gas-powered 
         drone technology as the pathway to making unmanned aircraft that would one day be able to 
         accomplish the same tasks as manned aircraft. He bought a DR-20 as a way to support Yuri’s 
-        work and kept up with the development team’s progress over the years. In this process, 
+        work and kept up with the development team’s progress over the years."
+        - "In this process, 
         he created Aero Fleet One, with a vision to someday have the world’s largest fleet of 
         autonomous drones performing aerial services at superior levels. Much time has passed 
         since then, and Aero Fleet One is grateful to Yuri for his contributions of technology 
         and inspiration, though the companies are no longer associated. Towards the end of 2020, 
         it came time to start making Mark’s dream a reality. Aero Fleet One’s core team was brought 
-        together to get it into place.
+        together to get it into place."
     purpose:
       heading: Our Purpose
-      text: >
-        We believe that drones are the future of aerial services, and we want to help bring this to 
+      text:
+        - "We believe that drones are the future of aerial services, and we want to help bring this to 
         fruition. With a big vision like ours, it’s important to start with a narrow focus. 
         We have selected agricultural aviation as the industry on which to focus our efforts 
         as we step into the world of aerial services. Our team has begun the process of 
         acquiring and merging with aerial application businesses. We seek to understand 
         this major industry thoroughly and do the work from the inside before trying to bring 
-        new technology to long-standing customers. We will be coming together with applicators 
+        new technology to long-standing customers."
+        - "We will be coming together with applicators 
         across the country to standardize protocols and communications for increased safety and 
         smoother pathways to shared knowledge. When UAS technology is finally ready to match 
         manned aircraft systems, we will be poised and ready to incorporate them into our 
         fleet-family in the most responsible, appropriate, expert way. We also look for ways 
         to support the development of drone technology and infrastructure to help bring 
         about a more autonomous world through conscientious collaboration. We exist 
-        to maximize potential and minimize risk for all involved.
+        to maximize potential and minimize risk for all involved."
 
   profile:
     heading: Heading
@@ -85,6 +87,7 @@ items:
           img: /assets/img/team/AllanDosan.jpg
           mail: allan@aerofleetone.com
           linkedin: https://www.linkedin.com/in/allandosan/
+          latlong: [44.98306165100913, -93.26148006478746]
           text: >
             Allan brings his strong background in business analysis and sales to Aero 
             Fleet One. He acts as a spokesperson and negotiator as we form partnerships 
@@ -94,6 +97,7 @@ items:
           img: /assets/img/team/DestinyWest.jpg
           mail: destiny@aerofleetone.com
           linkedin: https://www.linkedin.com/in/destiny-west-b9b7571b3/
+          latlong: [39.771370, -104.981852]
           text: >
             Destiny is our main public voice and administrative organizer. As she is training 
             for her pilot’s license, she is also our in-house aviation enthusiast.
@@ -102,6 +106,7 @@ items:
           img: /assets/img/team/MariaDyatchyna.jpg
           mail: maria@aerofleetone.com
           linkedin: https://www.linkedin.com/in/maria-dyatchyna-8ab61137/
+          latlong: [50.436699619840184, 30.51481603417014]
           text: >
             Maria utilizes her significant experience in business development 
             and deal-making to keep Aero Fleet One ahead of the game. She is the 
@@ -111,6 +116,7 @@ items:
           img: /assets/img/team/MarkErjavec.jpg
           mail: mark@aerofleetone.com
           linkedin: https://www.linkedin.com/in/markerjavec/
+          latlong: [39.74883535119338, -105.01637690875211]
           text: >
             Mark has provided the seed and continues to help this vision grow. 
             While managing our funding and resources, he keeps us all on track.
@@ -119,6 +125,7 @@ items:
           img: /assets/img/team/MatheusPicinin.jpg
           mail: matheus@aerofleetone.com
           linkedin: https://www.linkedin.com/in/matheus-raslan-a270941b4/
+          latlong: [53.349804, -6.260310]
           text: >-
             Matheus is a Brazilian Digital Marketer based in Ireland. Matheus’ main role is 
             to build a social media presence for Aero Fleet One. In addition he creates visual 
@@ -128,6 +135,7 @@ items:
           img: /assets/img/team/YuriySherayzen.png
           mail: yuriy@aerofleetone.com
           linkedin: https://www.linkedin.com/in/yuriy-sherayzen-6935894/
+          latlong: [44.943610, -93.368290]
           text: >-
             Yuriy is an experienced business analyst who helps guide our team as we move 
             forward with mergers and acquisitions.
@@ -136,6 +144,7 @@ items:
           img: /assets/img/team/DionasSilva.jpg
           mail: dionas@aerofleetone.com
           linkedin: https://www.linkedin.com/in/dionas-silva-1451a8153/
+          latlong: [-21.176630, -47.820839]
           text: >-
             As an expert agronomist and an experienced UAS pilot, Dionas is our 
             pioneer in Brazil as we expand to service North, Central and South America.
